// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a breadcrumb with no crumbs 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    class="usa-breadcrumb padding-top-0"
  >
    <ol
      class="usa-breadcrumb__list"
    />
  </nav>
</div>
`;

exports[`renders a breadcrumb with one crumb 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    class="usa-breadcrumb padding-top-0"
  >
    <ol
      class="usa-breadcrumb__list"
    >
      <li
        aria-current="page"
        class="usa-breadcrumb__list-item usa-current cursor-default"
      >
        <span>
          Add content
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`renders a breadcrumb with two crumbs 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    class="usa-breadcrumb padding-top-0"
  >
    <ol
      class="usa-breadcrumb__list"
    >
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          aria-label=""
          class="link "
          href="/home"
          target=""
        >
          <span>
            <span>
              Home
            </span>
          </span>
        </a>
      </li>
      <li
        aria-current="page"
        class="usa-breadcrumb__list-item usa-current cursor-default"
      >
        <span>
          Add content
        </span>
      </li>
    </ol>
  </nav>
</div>
`;
